--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="asets/css/reset.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mitr&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link type="text/css" rel="stylesheet" href="css/css/materialize.css" media="screen,projection">
-    <link rel="stylesheet" href="css/index.css">
+    <link type="text/css" rel="stylesheet" href="asets/css/css/materialize.css" media="screen,projection">
+    <link rel="stylesheet" href="asets/css/index.css">
     <title>Document</title>
 </head>
 
@@ -163,9 +163,9 @@
             </div>
         </footer>
     </div>
-    <script src="js/jquery/jquery-3.3.1.min.js"></script>
-    <script src="js/js/materialize.js"></script>
-    <script src="js/index.js"></script>
+    <script src="asets/js/jquery/jquery-3.3.1.min.js"></script>
+    <script src="asets/js/js/materialize.js"></script>
+    <script src="asets/js/index.js"></script>
 
 </body>
 
